[project]
name = "langraph-dev"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.14",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-aws>=1.5.0",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
